force-app/main/default/objects/vlocity_cmt__ObjectRuleAssignment__c/vlocity_cmt__ObjectRuleAssignment__c.object-meta.xml
<CustomObject>
    <description>Represents the attachment of a Vlocity Context Rule to all records of a given object such as Contract.</description>
    <label>Vlocity Object Rule Assignment</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Object Rule Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>