force-app/main/default/objects/vlocity_cmt__ObjectRuleAssignment__c/fields/vlocity_cmt__RuleId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__RuleId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vlocity Rule</label>
    <referenceTo>vlocity_cmt__Rule__c</referenceTo>
    <relationshipName>ObjectRuleAssignments</relationshipName>
    <type>Lookup</type>
</CustomField>